--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+body {
+  text-align: center;
+  background-color: beige;
+}
+
+.container {
+  width: 280px;
+  margin: 0 auto;
+}
+
 .coolTitle {
   text-align: center;
   font-family: 'Oswald', Helvetica, sans-serif;
@@ -22,11 +32,21 @@
   text-decoration: line-through;
 }
 
+.my-elements {
+  padding: 0;
+  margin: 0;
+  padding-top: 20px;
+}
+
 .my-elements li {
-  padding-bottom: 10px;
   width: 250px;
+  padding-bottom: 10px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  text-transform: capitalize;
 }
 
 .btn {
@@ -39,4 +59,10 @@
 
 .btn--delete {
   background-color: purple;
+  border: 2px solid palevioletred;
+}
+
+.btn--delete:hover {
+  background-color: palevioletred;
+  border: 2px solid purple;
 }
