--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: beige;
+	background: linear-gradient(to right, #94b394 , #A26767); /* Standard syntax */
 }
 
 .container {
@@ -65,4 +65,12 @@ body {
 .btn--delete:hover {
   background-color: palevioletred;
   border: 2px solid purple;
+}
+
+input[type="color"] {
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
 }
