--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-	background: linear-gradient(to right, #94b394 , #A26767); /* Standard syntax */
+	background: linear-gradient(to right, #94b394 , #A26767);
 }
 
 .container {
