--- a/style.css
+++ b/style.css
@@ -68,9 +68,32 @@ body {
 }
 
 input[type="color"] {
+  appearance: none;
+  padding: 0;
   width: 50px;
   height: 50px;
-  background-color: transparent;
+  background: none;
+  border: none;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;    
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;  
+  border-radius: 50%;
+}
+
+input[type=color]::-moz-focus-inner {
+  border: none;
+  padding: 0;
+  border-radius: 50%;
+}
+
+input[type=color]::-moz-color-swatch {
   border: none;
   border-radius: 50%;
 }
